gitops/manifests/rhbk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhbk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhbk
  template:
    metadata:
      labels:
        app: rhbk
    spec:
      containers:
        - name: rhbk
          image: registry.redhat.io/rhbk/keycloak-rhel9:26.0-1741630390
          ports:
            - containerPort: 8080
