gitops/manifests/rhbk/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rhbk
spec:
  to:
    kind: Service
    name: rhbk
    weight: 100
  port:
    targetPort: web-console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhbk-port
spec:
  to:
    kind: Service
    name: rhbk
  port:
    targetPort: core-messaging
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
